fix experiences spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -1343,7 +1343,7 @@ a {
 }
 
 .awards-item-text {
-    width: 60vw;
+    width: 53vw;
 	text-align: left;  
     margin: 0;
     padding: 0;
